[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/HitBox.gd" type="Script" id=1]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://art/small explosion.png" type="Texture" id=3]
[ext_resource path="res://scripts/battleMode/mothLaserBullet.gd" type="Script" id=4]
[ext_resource path="res://art/moth laser.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 8.0

[sub_resource type="CircleShape2D" id=9]
radius = 8.0

[node name="mothLaserBullet" type="AnimatedSprite"]
frames = SubResource( 7 )
playing = true
script = ExtResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 8 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 48
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 9 )

[connection signal="child_exiting_tree" from="." to="." method="_on_mothLaserBullet_child_exiting_tree"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
